--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -10,14 +10,26 @@ jobs:
   tag:
     if: (github.event.pull_request.merged == true)
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.tag.outputs.tag }}
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
     - name: Push Tag
+      id: tag
       run: |
         VERSION=$(git tag -l -n1 --format="%(refname:strip=2)" | tail -n1)
-        VERSION=$(awk -F. '/[0-9]+\./{$(NF-1)++;print}' OFS=. <<< "$VERSION")
+        VERSION=$(awk -F. '/[0-9]+\./{$(NF-1)++;$NF=0;print}' OFS=. <<< "$VERSION")
         git tag $VERSION
         git push --tags
+        
+        echo "tag=$VERSION" >> $GITHUB_OUTPUT
+
+  bundle:
+    needs: tag
+    uses: ./.github/workflows/bundle-push.yaml
+    with:
+      tag: ${{ needs.tag.outputs.tag }}
+
