--- a/github-arc-operator/config/rbac/service_account.yaml
+++ b/github-arc-operator/config/rbac/service_account.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: serviceaccount
     app.kubernetes.io/instance: controller-manager-sa
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: simple-arc-operator
-    app.kubernetes.io/part-of: simple-arc-operator
+    app.kubernetes.io/created-by: github-arc-operator
+    app.kubernetes.io/part-of: github-arc-operator
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager
   namespace: system
