--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -61,6 +61,6 @@ jobs:
     - name: Build and Push Images
       shell: bash
       run: |
-        cd simple-arc-operator/
+        cd github-arc-operator/
         make docker-build docker-push
         make bundle bundle-build bundle-push catalog-build catalog-push
