--- a/github-arc-operator/config/prometheus/monitor.yaml
+++ b/github-arc-operator/config/prometheus/monitor.yaml
@@ -8,8 +8,8 @@ metadata:
     app.kubernets.io/name: servicemonitor
     app.kubernetes.io/instance: controller-manager-metrics-monitor
     app.kubernetes.io/component: metrics
-    app.kubernetes.io/created-by: simple-arc-operator
-    app.kubernetes.io/part-of: simple-arc-operator
+    app.kubernetes.io/created-by: github-arc-operator
+    app.kubernetes.io/part-of: github-arc-operator
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-monitor
   namespace: system
