--- a/github-arc-operator/config/rbac/actionsrunnercontroller_viewer_role.yaml
+++ b/github-arc-operator/config/rbac/actionsrunnercontroller_viewer_role.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: clusterrole
     app.kubernetes.io/instance: actionsrunnercontroller-viewer-role
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: simple-arc-operator
-    app.kubernetes.io/part-of: simple-arc-operator
+    app.kubernetes.io/created-by: github-arc-operator
+    app.kubernetes.io/part-of: github-arc-operator
     app.kubernetes.io/managed-by: kustomize
   name: actionsrunnercontroller-viewer-role
 rules:
