--- a/github-arc-operator/config/rbac/auth_proxy_service.yaml
+++ b/github-arc-operator/config/rbac/auth_proxy_service.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: service
     app.kubernetes.io/instance: controller-manager-metrics-service
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: simple-arc-operator
-    app.kubernetes.io/part-of: simple-arc-operator
+    app.kubernetes.io/created-by: github-arc-operator
+    app.kubernetes.io/part-of: github-arc-operator
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-service
   namespace: system
