--- a/github-arc-operator/config/rbac/leader_election_role.yaml
+++ b/github-arc-operator/config/rbac/leader_election_role.yaml
@@ -6,8 +6,8 @@ metadata:
     app.kubernetes.io/name: role
     app.kubernetes.io/instance: leader-election-role
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: simple-arc-operator
-    app.kubernetes.io/part-of: simple-arc-operator
+    app.kubernetes.io/created-by: github-arc-operator
+    app.kubernetes.io/part-of: github-arc-operator
     app.kubernets.io/managed-by: kustomize
   name: leader-election-role
 rules:
