--- a/github-arc-operator/config/rbac/role_binding.yaml
+++ b/github-arc-operator/config/rbac/role_binding.yaml
@@ -3,16 +3,16 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app.kubernetes.io/name: clusterrolebinding
-    app.kubernetes.io/instance: proxy-rolebinding
-    app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: simple-arc-operator
-    app.kubernetes.io/part-of: simple-arc-operator
+    app.kubernetes.io/instance: manager-rolebinding
+    app.kubernetes.io/component: rbac
+    app.kubernetes.io/created-by: github-arc-operator
+    app.kubernetes.io/part-of: github-arc-operator
     app.kubernetes.io/managed-by: kustomize
-  name: proxy-rolebinding
+  name: manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: proxy-role
+  name: manager-role
 subjects:
 - kind: ServiceAccount
   name: controller-manager
