--- a/github-arc-operator/config/manifests/bases/github-arc-operator.clusterserviceversion.yaml
+++ b/github-arc-operator/config/manifests/bases/github-arc-operator.clusterserviceversion.yaml
@@ -36,7 +36,7 @@ spec:
   - runners
   links:
   - name: Github Arc Operator
-    url: https://github.com/boxboat-github-practice/github-arc-operator
+    url: https://github-arc-operator.domain
   maintainers:
   - email: Michael.McMullen@ibm.com
     name: mbmcmullen27
