--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -67,6 +67,8 @@ jobs:
 
     - name: Create Release Branch
       run: |
+        git config --global user.email "Michael.McMullen@ibm.com"
+        git config --global user.name "Github Action"
         git checkout -b release-${VERSION}
         git add .
         git commit -am "$VERSION bundle created"
