[create-pull-request] automated change

--- a/github-arc-operator/config/rbac/role.yaml
+++ b/github-arc-operator/config/rbac/role.yaml
@@ -113,4 +113,10 @@ rules:
       - validatingwebhookconfigurations
     verbs:
       - '*'
+  - apiGroups:
+      - security.openshift.io
+    resources:
+      - securitycontextconstraints
+    verbs:
+      - '*'
 #+kubebuilder:scaffold:rules
