--- a/overlays/scc_values.yaml
+++ b/overlays/scc_values.yaml
@@ -13,6 +13,7 @@ runnerServiceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: "ghr-sa"
 
+createRunnerNamespaces: true
 runnerNamespaces:
   - "ghrunners"
 
