--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -21,7 +21,9 @@ jobs:
       id: tag
       run: |
         VERSION=$(git tag -l -n1 --format="%(refname:strip=2)" | tail -n1)
+        echo "old tag: $VERSION"
         VERSION=$(awk -F. '/[0-9]+\./{$(NF-1)++;$NF=0;print}' OFS=. <<< "$VERSION")
+        echo "new tag: $VERSION"
         git tag $VERSION
         git push --tags
         
