--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -25,11 +25,11 @@ jobs:
 
     - name: Set Version
       run: |
+        TAG=${{ inputs.tag }}
         if [[ $GITHUB_REF_TYPE == "tag" ]]; then
           TAG=${GITHUB_REF#refs/*/}
           echo "VERSION=$TAG" >> $GITHUB_ENV
-        elif [[ ! -z ${{ inputs.tag }} ]]; then
-          TAG=${{ inputs.tag }}
+        elif [[ ! -z $TAG ]]; then
           echo "VERSION=${{ inputs.tag }}" >> $GITHUB_ENV
         else
           VERSION=$(git tag -l -n1 --format="%(refname:strip=2)" | tail -n1)
