--- a/.github/workflows/generate-operator.yaml
+++ b/.github/workflows/generate-operator.yaml
@@ -54,7 +54,7 @@ jobs:
           },
           {
             "apiGroups": [""],
-            "resources": ["serviceaccounts"],
+            "resources": ["serviceaccounts", "namespaces"],
             "verbs": ["*"]
           },
           {
