--- a/.github/workflows/bundle-push.yaml
+++ b/.github/workflows/bundle-push.yaml
@@ -32,7 +32,7 @@ jobs:
         elif [[ ! -z $TAG ]]; then
           echo "VERSION=$TAG" >> $GITHUB_ENV
         else
-          VERSION=$(git tag -l -n1 --format="%(refname:strip=2)" | tail -n1)
+          VERSION=$(git tag -l -n1 --format="%(refname:strip=2)" | sort -V | tail -n1)
           VERSION=$(awk -F. '/[0-9]+\./{$NF++;print}' OFS=. <<< "$VERSION")
           TAG=experimental
           echo "version: $VERSION"
