--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -20,7 +20,7 @@ jobs:
     - name: Push Tag
       id: tag
       run: |
-        VERSION=$(git tag -l -n1 --format="%(refname:strip=2)" | tail -n1)
+        VERSION=$(git tag -l -n1 --format="%(refname:strip=2)" | sort -V | tail -n1)
         echo "old tag: $VERSION"
         VERSION=$(awk -F. '/[0-9]+\./{$(NF-1)++;$NF=0;print}' OFS=. <<< "$VERSION")
         echo "new tag: $VERSION"
