--- a/samples/multiple-sample-1.yaml
+++ b/samples/multiple-sample-1.yaml
@@ -1,4 +1,4 @@
-apiVersion: charts.example.com/v1alpha1
+apiVersion: github-practice.boxboat.com/v1alpha1
 kind: ActionsRunnerController
 metadata:
   name: actionsrunnercontroller-sample-1
@@ -6,9 +6,7 @@ metadata:
 spec:
   leaderElectionId: 1
   authSecret:
-    name: arc-secret-1
-    create: true
-    github_token:  
+    name: ghauth
   scope:
     singleNamespace: true
     watchNamespace: test1
