--- a/.github/workflows/generate-operator.yaml
+++ b/.github/workflows/generate-operator.yaml
@@ -86,6 +86,9 @@ jobs:
         cp overlays/scc_template/* github-arc-operator/helm-charts/actions-runner-controller/templates
         cat overlays/scc_values.yaml >> github-arc-operator/helm-charts/actions-runner-controller/values.yaml
 
+        # simplify sample
+        cp samples/simple-sample.yaml github-arc-operator/config/samples/github-practice_v1alpha1_actionsrunnercontroller.yaml
+
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v4
       with:
