--- a/github-arc-operator/helm-charts/actions-runner-controller/values.yaml
+++ b/github-arc-operator/helm-charts/actions-runner-controller/values.yaml
@@ -195,7 +195,7 @@ githubWebhookServer:
   enabled: false
   replicaCount: 1
   useRunnerGroupsVisibility: false
-  ## specify log format for github webhook controller.  Valid options are "text" and "json"
+  ## specify log format for github webhook server.  Valid options are "text" and "json"
   logFormat: text
   secret:
     enabled: false
@@ -240,6 +240,7 @@ githubWebhookServer:
         protocol: TCP
         name: http
         #nodePort: someFixedPortForUseWithTerraformCdkCfnEtc
+    loadBalancerSourceRanges: []
   ingress:
     enabled: false
     ingressClassName: ""
@@ -276,6 +277,21 @@ githubWebhookServer:
     # minAvailable: 1
     # maxUnavailable: 3
   # queueLimit: 100
+  terminationGracePeriodSeconds: 10
+  lifecycle: {}
+  # specify additional environment variables for the webhook server pod.
+  # It's possible to specify either key vale pairs e.g.:
+  # my_env_var: "some value"
+  # my_other_env_var: "other value"
+
+  # or a list of complete environment variable definitions e.g.:
+  # - name: GITHUB_WEBHOOK_SECRET_TOKEN
+  #   valueFrom:
+  #     secretKeyRef:
+  #       key: GITHUB_WEBHOOK_SECRET_TOKEN
+  #       name: prod-gha-controller-webhook-token
+  #       optional: true
+  env: {}
 
 actionsMetrics:
   serviceAnnotations: {}
@@ -298,7 +314,7 @@ actionsMetricsServer:
   # See the thread below for more context.
   # https://github.com/actions/actions-runner-controller/pull/1814#discussion_r974758924
   replicaCount: 1
-  ## specify log format for github webhook controller.  Valid options are "text" and "json"
+  ## specify log format for actions metrics server.  Valid options are "text" and "json"
   logFormat: text
   secret:
     enabled: false
