meta data corrections

--- a/github-arc-operator/config/manifests/bases/github-arc-operator.clusterserviceversion.yaml
+++ b/github-arc-operator/config/manifests/bases/github-arc-operator.clusterserviceversion.yaml
@@ -3,7 +3,8 @@ kind: ClusterServiceVersion
 metadata:
   annotations:
     categories: Developer Tools, Integration & Delivery, OpenShift Optional
-    containerImage: ghcr.io/boxboat-github-practice/github-arc-operator:1.0.1
+    containerImage: ghcr.io/boxboat-github-practice/github-arc-operator:1.1.0
+    description: Operator for deploying the github actions runner controller
     repository: https://github.com/boxboat-github-practice/github-arc-operator
     description: Operator for deploying the github actions runner controller
     alm-examples: '[]'
